[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://level_select/locked.png" type="Texture" id=2]
[ext_resource path="res://level_select/level_button.gd" type="Script" id=3]

[node name="LevelButton" type="Control"]
rect_min_size = Vector2( 48, 48 )
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockIcon" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelNumber" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
text = "Lvl 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
